0.6.0
-----
x Slight documentation corrections
x The sidecar stats file was not correctly detected if the media file is open instead of the sidecar stats file
x Linux only: The sidecar stats file was not correctly loaded

0.5.0, 2014-09-12
-----
+ New graph filters (Crop...)
+ Updated playback filters (with more options e.g. color picker, vertical filters)
+ Y-axis has minutes, hours options
+ Frame positioning vertical line
+ Import/Export of .qctools.xml.gz stats file (compatible with Ffmpeg 2.3 output)
+ Updated documentation
+ Using official FFmpeg 2.3

0.4.0, 2014-04-26
-----
+ New graph filters (MSEf, PSNR...)
+ New playback filters (Value hightlight, Chroma adjust...)
+ Configurable playback filters (with checkboxes, radiobuttons, sliders...)
+ Multifiles support
+ Refreshed UI
+ Speed optimizations
+ Tested compatibility with Windows XP to 8, Mac OS X 10.6 to 10.9

0.3.0, 2014-01-27
-----
+ Refactoring of code, optimization of performance/binary size/memory footprint/count of bytes read from disk
+ Using display aspect ratio from the stream
+ Video filters update
+ Documentation update
+ Slider in Video Analysis Window
+ Double-view in Video Analysis Window
+ Resizable Video Analysis Window
+ License update (more detailed)
x Documentation is now conform to XHTML strict
x HEAD values were not correctly loaded from the sidecar CSV file

0.2.0, 2014-01-20
-----
+ Using ffmpeg library instead of ffmpeg command line for thumbnail creation and picture display (speed improvement)
+ Playback (fast/normal/slow rewind, fast/normal/slow forward)
+ Documentation update
+ Tooltips above checkboxes
+ "License" renamed to "About" (moved to the application menu on Mac OS X in order to meet UI guidelines)
+ CSV export: an header line is added
+ Ability to read the sidecar CSV file (named "FileName.FileExtension.qctools.csv") during file opening

0.1.6, 2013-11-11
-----
+ FFmpeg is compiled with YASM and GPLv3: smoother decoding and all predefined filters are present